# dracor-mcp-evaluation

./: README.md
2026-JCLS-CDA-Documentation/04_autoEva/: automatic_prompting.py  pyproject.toml  responses_analyser.ipynb
2026-JCLS-CDA-Documentation/04_autoEva/preliminary_work/: DraCor MCP Tools - Tabellenblatt1.csv  compiled_manual_answers.csv  mcp-evaluation-baseline-tool-chains.json
2026-JCLS-CDA-Documentation/04_autoEva/results/: haiku-4-5_response_diversity_summary.csv  hit_miss_table_sonnet-4.csv  sonnet-4_response_diversity_summary.csv
2026-JCLS-CDA-Documentation/04_autoEva/results_validated/haiku-4-5/: 1-1_10_validated-tools.json  1-1_3_validated-tools.json  1-1_4_validated-tools.json  1-1_6_validated-tools.json  1-1_7_validated-tools.json  1-1_8_validated-tools.json  1-1_9_validated-tools.json  1-2_2_validated-tools.json  1-2_4_validated-tools.json  1-2_6_validated-tools.json  1-2_7_validated-tools.json  1-2_9_validated-tools.json  1-3_1_validated-tools.json  1-3_2_validated-tools.json  1-3_4_validated-tools.json  1-3_8_validated-tools.json  1-4_4_validated-tools.json  1-4_9_validated-tools.json  1-5_10_validated-tools.json  1-5_1_validated-tools.json  1-5_2_validated-tools.json  1-5_4_validated-tools.json  3-1_10_validated-tools.json  3-1_3_validated-tools.json  3-1_6_validated-tools.json  3-1_7_validated-tools.json  4-2_3_validated-tools.json  4-2_4_validated-tools.json  4-2_7_validated-tools.json  4-3_2_validated-tools.json  4-3_6_validated-tools.json  4-3_7_validated-tools.json  4-3_9_validated-tools.json  4-4_4_validated-tools.json  (+17 more)
(+1043 files in other folders)
